k8s/gemma-3-1b-it-vllm.yaml
# TODO: Fail writing this yaml from scratch
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemma-3-1b-it-deployment
spec:
  selector:
    matchLabels:
      app: gemma-3-1b-it-deployment
  template:
    metadata:
      labels:
        app: gemma-3-1b-it-deployment
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
        cloud.google.com/gke-gpu-driver-version: latest
      containers:
      - name: gemma-3-1b-it-deployment
        image: us-docker.pkg.dev/vertex-ai/vertex-vision-model-garden-dockers/pytorch-vllm-serve:20250312_0916_RC01
        command: ["python3", "-m", "vllm.entrypoints.openai.api_server"]
        args:
        - --model=$(MODEL_ID)
        - --tensor-parallel-size=1
        - --host=0.0.0.0
        - --port=8000
        - --max-model-len=32768
        - --max-num-seqs=4
        resources:
          limits:
            memory: "20Gi"
            cpu: "6"
            nvidia.com/gpu: "1"
          requests:
            memory: "20Gi"
            cpu: "6"
            nvidia.com/gpu: "1"
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: dshm
        emptyDir:
            medium: Memory

---
apiVersion: v1
kind: Service
metadata:
  name: gemma-3-1b-it-service
spec:
  selector:
    app: gemma-3-1b-it-deployment
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
